vendor/async-trait-0.1.50/tests/ui/must-use.stderr
error: unused return value of `Interface::f` that must be used
  --> $DIR/must-use.rs:18:5
   |
18 |     Thing.f();
   |     ^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/must-use.rs:1:9
   |
1  | #![deny(unused_must_use)]
   |         ^^^^^^^^^^^^^^^
